--- a/composer/composer.json
+++ b/composer/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "stfalcon/tinymce-bundle": "^2.3",
-        "tinymce/tinymce": "^5.0"
+        "tinymce/tinymce": "^5.0",
+        "gumlet/php-image-resize": "1.9.*"
     }
 }
